blocks/site/_main.scss
body > main {
  section {
    margin: 20px;

    h1 {
      text-align: center;
      line-height: 22px;
      font-size: 22px;
    }
  }

  .montage {
    overflow-x: hidden;

    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
      width: 640px;
    }

    @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
      background-color: orange;
      width: 896px;
    }

    @media (min-width: $screen-lg-min) {
      width: 1024px;
    }
  }

  @media (min-width: $screen-md-min) {
    .wave-logo {
      background-image: url(/images/wave.png);
      background-size: 40%;
      background-repeat: no-repeat;
      background-position: right 15px bottom -10px;
    }

    .wave-compensate {
      padding-bottom: 25%;
    }
  }
}

.small{
  font-size: 90%;
  margin-bottom: 3.3rem;
}

.p_center{
  text-align: center;
}

.p_gold{
  color: #ffb250;
}

.border_blue{
  border-color: #0054a6;
}

.background_blue{
  background-color: #0054a6; 
}

.name-on-hover{
  white-space: nowrap; 
  overflow: hidden;
  text-overflow: ellipsis;
}

/* div.name-on-hover:hover{
  overflow: visible;
  white-space: normal;
} */

.idea-left-column{
  @media (min-width: $screen-lg-min) {
    padding-top: 21px;
  }
}

.idea-trending-margin{
  margin-left: 0px;
  margin-right: 0px;
}

.project-left-column{
  @media (min-width: $screen-lg-min) {
    padding-top: 21px;
  }
}

.project-trending-margin{
  margin-left: 0px;
  margin-right: 0px;
}

